apps/quizup-web/manifests.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quizup-web
  namespace: quizup-prod
  labels:
    app.kubernetes.io/part-of: quizup
    app: quizup-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: quizup
      app: quizup-web
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: quizup
        app: quizup-web
    spec:
      imagePullSecrets:
        - name: ghcr-pull
      containers:
        - name: quizup-web
          image: ghcr.io/quizup-organization/quizup-web:1.0.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: "1"
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 15
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: quizup-web
  namespace: quizup-prod
  labels:
    app.kubernetes.io/part-of: quizup
    app: quizup-web
spec:
  selector:
    app.kubernetes.io/part-of: quizup
    app: quizup-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
